--- a/department-service/src/main/resources/application.properties
+++ b/department-service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
+spring.application.name=DEPARTMENT-SERVICE
+eureka.instace.cleint.serverUrl.defaultZone=http://localhost:8761/eureka/
