--- a/employee-service/src/main/resources/application.properties
+++ b/employee-service/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 server.port = 8081
+spring.application.name=EMPLOYEE-SERVICE
+eureka.instace.cleint.serverUrl.defaultZone=http://localhost:8761/eureka/
